--- a/src/pages/articles/index.astro
+++ b/src/pages/articles/index.astro
@@ -88,7 +88,7 @@ const articleHref = (slug) => `${base}/articles/${slug}/`;
         The first guide is being prepared. For now, you can explore the current body of work.
       </p>
       <p class="articles-empty__action">
-        <a class="articles-empty__link" href={`${base}/art/`}>View the work</a>
+        <a class="articles-empty__link" href={`${base}/LifeResetPro/`}>Your Turn</a>
       </p>
     </section>
   )}
