--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import { getCollection } from "astro:content";
 
 const base = import.meta.env.BASE_URL || "/";
 
-const SAATCHI_URL = "https://www.saatchiart.com/en-au/solara-meridian-studio/";
+const SAATCHI_PROFILE_URL = "https://www.saatchiart.com/en-au/solara-meridian-studio/";
 const REDBUBBLE_URL = "https://www.redbubble.com/people/SamFrederiksen/shop/";
 const DOWNLOAD_URL = "https://resethaven.gumroad.com//";
 
