--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -73,7 +73,7 @@ const canonical = `${SITE_ORIGIN}${canonicalPath}`;
             <a href={`${base}/about/`}>About</a>
             <a href={`${base}/articles/`}>Articles</a>
             <a href={`${base}/LifeResetPro/`}>LifeResetPro</a>
-            <a href={`${base}/provenance/`}>Provenance</a>
+            <a href={`${base}/Ethics/`}>Ethics</a>
           </div>
         </div>
       </footer>
