--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -42,6 +42,15 @@ const canonical = `${SITE_ORIGIN}${canonicalPath}`;
 
     <!-- Public asset served by Astro from /public/styles/global.css -->
     <link rel="stylesheet" href={`${base}/styles/global.css`} />
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4FY7ZHCQ7Z"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4FY7ZHCQ7Z');
+</script>
   </head>
 
   <body>
